--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,10 @@ input[type="file"] {
 	cursor: pointer;
 }
 .form_control {
-	width: 100%;
+	width: 95%;
 	height: 100%;
 	border: none;
-	padding-left: 15px;
+	padding-left: 5%;
 }
 
 
@@ -152,6 +152,11 @@ iframe {
 	border-top: 2px solid #e4e7f0;
 	font-size: 0.9em;
 }
+/*
+.regedit .regedit_table tr:nth-child(2) {
+	display: none;
+}
+*/
 .regedit .regedit_table th {
 	border-bottom: 2px solid #e4e7f0;
 	border-right: 2px dotted #e4e7f0;
